[project]
name = "aws-cost-explorer-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.37.9",
    "botocore>=1.37.9",
    "chainlit>=2.4.1",
    "jmespath>=1.0.1",
    "langchain>=0.3.20",
    "langchain-anthropic>=0.3.9",
    "langchain-aws>=0.2.15",
    "langchain-mcp-adapters>=0.0.4",
    "langgraph>=0.3.10",
    "mcp>=1.3.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "streamlit>=1.44.1",
    "tabulate>=0.9.0",
    "typing-extensions>=4.12.2",
]
